Fix Venom feed on mobile

--- a/src/pages/feed/components/venomFeedPostItem/venomFeedPostItem.module.scss
+++ b/src/pages/feed/components/venomFeedPostItem/venomFeedPostItem.module.scss
@@ -24,6 +24,10 @@
 	color: #fff;
 	background: linear-gradient(150deg, #50bc67 15%, #3a63ce 85%);
 	border-radius: 50%;
+
+	@include less720px {
+		grid-row: 1/2;
+	}
 }
 
 .meta {
@@ -34,6 +38,12 @@
 	justify-content: space-between;
 	grid-gap: 8px;
 	padding: 3px 2px 0 0;
+
+	@include less720px {
+		grid-template-columns: 1fr;
+		align-content: center;
+		grid-gap: 2px;
+	}
 }
 
 .metaRight {
@@ -41,6 +51,10 @@
 	grid-auto-flow: column;
 	align-items: center;
 	grid-gap: 4px;
+
+	@include less720px {
+		justify-content: start;
+	}
 }
 
 .sender {
@@ -67,6 +81,10 @@
 .body {
 	display: grid;
 	grid-gap: 12px;
+
+	@include less720px {
+		grid-column: 1/3;
+	}
 }
 
 .cover {
@@ -74,20 +92,4 @@
 	max-height: 240px;
 	object-fit: cover;
 	border-radius: 8px;
-}
-
-@include less720px {
-	.ava {
-		grid-row: 1/2;
-	}
-
-	.meta {
-		grid-template-columns: 1fr;
-		align-content: center;
-		grid-gap: 2px;
-	}
-
-	.body {
-		grid-column: 1/3;
-	}
 }
